--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "UI": "node ./node_modules/nodemon/bin/nodemon.js ./UI/bin/www"
   },
   "dependencies": {
+    "crypto": "0.0.3",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
     "superagent": "^3.2.1"
