--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "private": true,
   "scripts": {
     "KDC": "node ./node_modules/nodemon/bin/nodemon.js ./KDC/bin/www",
-    "UI": "node ./node_modules/nodemon/bin/nodemon.js ./UI/bin/www"
+    "UI": "node ./node_modules/nodemon/bin/nodemon.js ./UI/bin/www",
+    "build" : "node ./node_modules/browserify/bin/cmd.js ./UI/public/javascripts/index.js > ./UI/public/javascripts/crypto.js"
   },
   "dependencies": {
     "crypto": "0.0.3",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.14.0",
     "nodemon": "^1.11.0",
+    "request": "^2.79.0",
+    "require": "^2.4.20",
     "superagent": "^3.2.1"
+  },
+  "devDependencies": {
+    "browserify": "^13.1.1",
+    "webpack": "^1.14.0"
   }
 }
