--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "scripts": {
     "KDC": "node ./node_modules/nodemon/bin/nodemon.js ./KDC/bin/www",
     "UI_pre": "node ./node_modules/nodemon/bin/nodemon.js ./UI/bin/www",
-    "browserify" : "node ./node_modules/browserify/bin/cmd.js ./UI/public/javascripts/index.js > ./UI/public/javascripts/crypto.js",
-    "UI" : "npm run browserify && npm run UI_pre"
+    "browserify": "node ./node_modules/browserify/bin/cmd.js ./UI/public/javascripts/index.js > ./UI/public/javascripts/crypto.js",
+    "UI": "npm run browserify && npm run UI_pre"
   },
   "dependencies": {
     "crypto": "0.0.3",
     "csv-write-stream": "^2.0.0",
     "express": "^4.14.0",
-    "nodemon": "^1.11.0",
+    "mongoose": "^4.7.4",
     "request": "^2.79.0",
-    "require": "^2.4.20",
     "superagent": "^3.2.1"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "nodemon": "^1.11.0"
   }
 }
