--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-write-stream": "^2.0.0",
     "express": "^4.14.0",
     "mongoose": "^4.7.4",
+    "randomstring": "^1.1.5",
     "request": "^2.79.0",
     "superagent": "^3.2.1"
   },
